checked OXA-1 example works

--- a/analyse-oxa1-variants.ipynb
+++ b/analyse-oxa1-variants.ipynb
@@ -47,6 +47,7 @@
    "outputs": [],
    "source": [
     "# create an instance of the class by giving it the nucleotide sequence as a string\n",
+    "# by setting species=None, all results will be considered\n",
     "oxa1=pygsi.NucleotideStretch(nucleotide_sequence=oxa1_sequence,\\\n",
     "                             gene_name=\"oxa1\",\\\n",
     "                             first_amino_acid_position=1,\\\n",
@@ -78,26 +79,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  2%|▏         | 6/257 [06:25<4:28:41, 64.23s/it]"
+      "100%|██████████| 17/17 [02:41<00:00,  9.52s/it]\n"
      ]
     }
    ],
    "source": [
-    "for position in tqdm(range(10,267)):\n",
+    "for position in tqdm(range(228,245)):\n",
     "    for i in [1,2,3]:\n",
     "        oxa1.permuate_position(position,triplet_position=i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -105,13 +106,22 @@
      "output_type": "stream",
      "text": [
       "   amino_acid_position mutation new_amino_acid new_triplet  non_synonymous  \\\n",
-      "0                  102    M102I              I         ata            True   \n",
+      "0                  244    V244F              F         ttt            True   \n",
+      "1                  244    V244I              I         att            True   \n",
+      "2                  237    S237R              R         aga            True   \n",
+      "3                  229    G229E              E         gaa            True   \n",
       "\n",
       "   number_genomes  number_nucleotide_changes  number_reference_genomes  \\\n",
-      "0               2                          1                      6448   \n",
+      "0               3                          1                      6448   \n",
+      "1               1                          1                      6448   \n",
+      "2               1                          1                      6448   \n",
+      "3              14                          1                      6448   \n",
       "\n",
       "  original_amino_acid original_triplet  synonymous  \n",
-      "0                   M              atg       False  \n"
+      "0                   V              gtt       False  \n",
+      "1                   V              gtt       False  \n",
+      "2                   S              agc       False  \n",
+      "3                   G              gga       False  \n"
      ]
     }
    ],
@@ -121,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
